# subtitle_generator_and_translator_ocr

./: .gitignore  README.md  pyproject.toml
subtitle_generator_and_translator_ocr/: install_translation_model.py  main.py
